python/testData/inspections/PyUnresolvedReferencesInspection/UsedUnresolvedNameImportedSeveralTimes/a.py
from my_package.my_module import <error descr="Unresolved reference 'eggs'">eggs</error>
from my_package.my_module import <error descr="Unresolved reference 'eggs'">eggs</error>

eggs()
